# Business-Analysis-tool

./: .gitignore
Backend/: README.md  pyproject.toml  requirement.txt
Backend/src/: config.py  main.py  prompts.py
Backend/src/models/: db.py  repository.py  schemas.py
Backend/src/routers/: chat.py  dependencies.py  documents.py  embeddings.py  graph.py  sessions.py
Backend/src/services/: bridge_engine.py  chat_engine.py  chroma_store.py  chunker.py  clusterer.py  embedder.py  extractor.py  graph_builder.py  neo4j_manager.py
Backend/src/utils/: auth.py  cost_tracker.py  normalizer.py
Frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
Frontend/app/: globals.css  layout.tsx  page.tsx
Frontend/app/(auth)/login/: page.tsx
Frontend/app/api/health/: route.ts
Frontend/app/dashboard/: page.tsx
Frontend/app/session/[id]/: page.tsx
Frontend/app/workspace/: page.tsx
Frontend/components/chat/: ChatPanel.tsx
Frontend/components/graph/: BridgeEdge.tsx  ClusterBubble.tsx  ForceGraph.tsx  NodeCard.tsx
Frontend/components/session/: SessionToolbar.tsx
Frontend/components/upload/: DocumentUploader.tsx
Frontend/lib/: api-client.ts  d3-config.ts
infra/: railway.toml  vercel.json
